# Test_time_tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  code.txt  docker-compose.yml  getcode.py  justfile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: projects.py  time_entries.py  users.py
tests/: conftest.py  test_projects.py  test_time_entries.py  test_users.py
