[project]
name = "time-tracker"
version = "0.1.0"
description = "Time tracking API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true

[tool.ruff]
line-length = 88
select = [
    "E",   # Pycodestyle errors
    "F",   # Pyflakes
    "I",   # Isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "PL",  # Pylint
]
ignore = ["E501", "B008", "PLR2004"]

[tool.pytest.ini_options]
addopts = "-v --cov=app --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
